demenchuk/examples/errors/parser/10_unclosed_list.riv
# PARSER ERROR: Незакрытый список
# Ожидаемая ошибка: missing ']' at line 5

# Отсутствует закрывающая скобка
data = [1, 2, 3, 4, 5
write(data)
